unpackaged/main/default/objects/fferpcore__SlackChannelEvent__e/fferpcore__SlackChannelEvent__e.object-meta.xml
<CustomObject>
    <description>Tracks details of related Slack channels.</description>
    <label>Slack Channel Event</label>
    <pluralLabel>Slack Channel Events</pluralLabel>
</CustomObject>