unpackaged/main/default/objects/fferpcore__SlackChannelEvent__e/fields/fferpcore__Archived__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Slack channel is archived.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>