unpackaged/main/default/objects/fferpcore__SlackChannelEvent__e/fields/fferpcore__ChannelId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ChannelId__c</fullName>
    <description>The ID of the Slack channel.</description>
    <label>Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>