unpackaged/main/default/objects/fferpcore__SlackChannelEvent__e/fields/fferpcore__ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ErrorCode__c</fullName>
    <description>A code representing an error that occurred.</description>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>