unpackaged/main/default/objects/fferpcore__SlackChannelEvent__e/fields/fferpcore__Members__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Members__c</fullName>
    <description>The list of users who are associated with the Slack channel.</description>
    <label>Channel Members</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>